RESOLVED FIXED306318
Address debug asserts with user agent shadow roots
https://bugs.webkit.org/show_bug.cgi?id=306318
Summary Address debug asserts with user agent shadow roots
Anne van Kesteren
Reported 2026-01-27 00:01:53 PST
.
Attachments
Anne van Kesteren
Comment 1 2026-01-27 00:01:55 PST
Anne van Kesteren
Comment 2 2026-01-27 00:02:52 PST
EWS
Comment 3 2026-01-27 04:09:55 PST
Committed 306273@main (99f0baacdd6d): <https://commits.webkit.org/306273@main> Reviewed commits have been landed. Closing PR #57312 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.