Address debug asserts with user agent shadow roots https://bugs.webkit.org/show_bug.cgi?id=306318 rdar://168899377

Reviewed by Ryosuke Niwa and Tim Nguyen.

New tests:

    https://github.com/web-platform-tests/wpt/pull/57354

Canonical link: https://commits.webkit.org/306273@main